--- a/app/src/main/res/layout/activity_station.xml
+++ b/app/src/main/res/layout/activity_station.xml
@@ -131,8 +131,9 @@
                     android:paddingStart="8dp"
                     android:paddingEnd="8dp"
                     android:text="@string/into_center"
-                    android:textColor="@android:color/white"
+                    android:textColor="?backgroundViewColor"
                     android:textSize="12sp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/station_opposite_btn"
                     app:layout_constraintEnd_toStartOf="@+id/station_favourite"
                     app:layout_constraintTop_toTopOf="@+id/station_opposite_btn"
