--- a/app/src/main/res/layout/activity_departure.xml
+++ b/app/src/main/res/layout/activity_departure.xml
@@ -66,11 +66,24 @@
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                 android:text="@string/into_center"
-                android:textColor="@android:color/white"
+                android:textColor="?backgroundViewColor"
                 android:textSize="10sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/departure_station_name"
                 app:layout_constraintStart_toEndOf="@+id/departure_station_name"
                 app:layout_constraintTop_toTopOf="@+id/departure_station_name" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="VOZNI RED"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/station_center"
+                app:layout_constraintStart_toEndOf="@+id/station_center"
+                app:layout_constraintTop_toTopOf="@+id/station_center" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
