--- a/app/src/main/res/layout/template_custom_toast.xml
+++ b/app/src/main/res/layout/template_custom_toast.xml
@@ -15,6 +15,8 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_weight="1"
+        android:minWidth="24dp"
+        android:minHeight="24dp"
         android:tint="?android:textColor"
         app:srcCompat="@drawable/ic_swap_vert_black_24dp" />
 
