--- a/app/src/main/res/layout/template_forum_post.xml
+++ b/app/src/main/res/layout/template_forum_post.xml
@@ -52,7 +52,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:text="Nova posodobitev prihaja kmalu."
-            android:textColor="?android:textColorHint"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
