--- a/app/src/main/res/layout/template_live_arrival.xml
+++ b/app/src/main/res/layout/template_live_arrival.xml
@@ -41,8 +41,8 @@
             android:minWidth="24dp"
             android:minHeight="24dp"
             android:padding="4dp"
-            android:src="@drawable/ic_favorite_black_24dp"
-            android:tint="@color/colorAccent" />
+            android:src="@drawable/ic_bookmark_border_24px"
+            android:tint="?android:textColor"/>
     </LinearLayout>
 
     <com.google.android.flexbox.FlexboxLayout
