--- a/app/src/main/res/layout/template_tag_add.xml
+++ b/app/src/main/res/layout/template_tag_add.xml
@@ -16,7 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/tag_delete"
