--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <!-- not using these -->
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#D81B60</color> <!-- #00574B-->
     <color name="colorAccent">#D81B60</color>
 
     <!-- global colors -->
@@ -44,7 +44,7 @@
 
 
     <!-- dark theme -->
-    <color name="color_main_background_dark">#212529</color> <!-- #202020 -->
+    <color name="color_main_background_dark">#212529</color>
     <color name="color_text_dark">#FFFFFF</color>
 
 </resources>
