--- a/app/src/main/res/layout/template_station_node.xml
+++ b/app/src/main/res/layout/template_station_node.xml
@@ -36,9 +36,20 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/node_icon"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/station_arrivals"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_node_connection" />
+
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/station_arrivals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        app:alignItems="flex_start"
+        app:flexWrap="wrap"
+        app:layout_constraintBottom_toBottomOf="@+id/station_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/station_name" />
 
     <View
         android:id="@+id/bottom_node_connection"
