--- a/app/src/main/res/layout/template_arrival_time.xml
+++ b/app/src/main/res/layout/template_arrival_time.xml
@@ -58,17 +58,18 @@
             app:layout_constraintStart_toEndOf="@+id/arrival_time_time"
             app:layout_constraintTop_toTopOf="@+id/arrival_time_time" />
 
-        <ImageView
+        6<ImageView
             android:id="@+id/arrival_time_event_rss"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_marginStart="4dp"
             android:src="@drawable/ic_rss_feed_24px"
             android:tint="?android:textColor"
             app:layout_constraintBottom_toBottomOf="@+id/arrival_time_time"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/arrival_time_event"
-            app:layout_constraintTop_toTopOf="@+id/arrival_time_time" />
+            app:layout_constraintTop_toTopOf="@+id/arrival_time_time"
+            app:layout_constraintVertical_bias="0.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
