--- a/app/src/main/res/layout/template_live_arrival_special.xml
+++ b/app/src/main/res/layout/template_live_arrival_special.xml
@@ -5,18 +5,29 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
 
-    android:layout_marginEnd="4dp"
+    android:layout_marginEnd="2dp"
     android:layout_marginBottom="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/arrival_time_back"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/stretched_circle"
         android:orientation="vertical"
         android:padding="2dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp">
+        android:paddingStart="6dp"
+        android:paddingEnd="6dp">
+
+        <ImageView
+            android:id="@+id/live_icon"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:alpha=".6"
+            android:src="@drawable/ic_rss_feed_2_24px"
+            android:tint="?android:textColor"
+            android:visibility="gone"
+            app:layout_constraintStart_toEndOf="@+id/arrival_time_time"
+            app:layout_constraintTop_toTopOf="@+id/arrival_time_time" />
 
         <TextView
             android:id="@+id/arrival_time_time"
@@ -25,12 +36,27 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:alpha=".6"
-            android:text="11:15"
+            android:text="11 min"
             android:textColor="?android:textColor"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/garage_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:alpha="0.6"
+            android:foregroundGravity="top"
+            android:gravity="top"
+            android:text="G"
+            android:textSize="8sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/arrival_time_time"
+            app:layout_constraintStart_toEndOf="@+id/arrival_time_time" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
