--- a/app/src/main/res/drawable-xxhdpi/station_circle_node.xml
+++ b/app/src/main/res/drawable-xxhdpi/station_circle_node.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/transparent" />
+    <solid android:color="?backgroundViewColor" />
     <stroke android:width="3dp"
         android:color="?android:textColor"/>
 
