--- a/app/src/main/res/drawable/bus_pointer.xml
+++ b/app/src/main/res/drawable/bus_pointer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:top="8dp" android:bottom="8dp" android:right="8dp" android:left="8dp">
+    <item android:bottom="4dp" android:right="4dp" android:left="4dp">
             <rotate
                 android:fromDegrees="45"
                 android:toDegrees="45"
@@ -10,10 +10,12 @@
                 <shape android:shape="rectangle">
                     <solid android:color="@color/colorAccent" />
                     <corners android:bottomLeftRadius="20dp"
-                        android:bottomRightRadius="20dp"
+                        android:topLeftRadius="15dp"
                         android:topRightRadius="20dp"/>
                     <size android:height="20dp"
                         android:width="20dp"/>
+                    <stroke android:color="@android:color/white"
+                        android:width="2dp" />
                 </shape>
             </rotate>
     </item>
