--- a/app/src/main/res/layout/template_station_node.xml
+++ b/app/src/main/res/layout/template_station_node.xml
@@ -61,6 +61,7 @@
         android:id="@+id/node_icon"
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:foregroundGravity="center"
         android:src="@drawable/station_circle_node"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/station_name"
