--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -31,7 +31,7 @@
         android:tint="?android:textColor" />
 
     <View
-        android:id="@+id/shadow2"
+        android:id="@+id/shadow"
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:background="@drawable/top_shadow_gradient"
