--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,6 +119,7 @@
         android:translationZ="6dp"
         app:behavior_hideable="false"
         app:behavior_peekHeight="150dp"
+        app:behavior_fitToContents="false"
         app:layout_behavior="@string/view_pager_bottom_sheet_behavior" />
 
     <com.VegaSolutions.lpptransit.ui.errorhandlers.TopMessage
