--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -47,7 +47,7 @@
         android:translationZ="2dp"
         app:behavior_hideable="false"
         app:behavior_peekHeight="100dp"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+        app:layout_behavior="@string/view_pager_bottom_sheet_behavior">
 
         <FrameLayout
             android:id="@+id/header"
