--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.activities.MainActivity"
-    tools:ignore="ContentDescription"
-
     android:id="@+id/root"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent" >
+    android:layout_width="match_parent"
 
+    android:layout_height="match_parent"
+    tools:context=".ui.activities.MainActivity"
+    tools:ignore="ContentDescription">
 
 
     <fragment
@@ -29,7 +27,7 @@
         android:backgroundTint="?backgroundViewColor"
         android:clickable="true"
         android:focusable="true"
-        app:cardCornerRadius="26dp"
+        app:cardCornerRadius="7dp"
         app:cardElevation="6dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -117,15 +115,15 @@
         android:elevation="6dp"
         android:focusable="true"
         android:translationZ="6dp"
+        app:behavior_fitToContents="false"
         app:behavior_hideable="false"
         app:behavior_peekHeight="150dp"
-        app:behavior_fitToContents="false"
         app:layout_behavior="@string/view_pager_bottom_sheet_behavior" />
 
     <com.VegaSolutions.lpptransit.ui.errorhandlers.TopMessage
         android:id="@+id/top_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"/>
+        android:layout_marginTop="65dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
