--- a/app/src/main/res/layout/activity_detur.xml
+++ b/app/src/main/res/layout/activity_detur.xml
@@ -10,28 +10,28 @@
         android:id="@+id/detour_activity_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="7dp"
-        android:paddingVertical="7dp">
+        android:paddingVertical="7dp"
+        android:paddingStart="7dp">
 
         <ImageView
             android:id="@+id/iv_back"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_back_arrow"
-            android:tint="?android:textColor"
-            android:padding="7dp"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
-            android:layout_centerVertical="true"/>
+            android:padding="7dp"
+            android:src="@drawable/ic_back_arrow"
+            android:tint="?android:textColor" />
 
         <TextView
             android:id="@+id/tv_detours"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/iv_back"
             android:paddingStart="15dp"
             android:paddingTop="5dp"
             android:paddingEnd="15dp"
             android:paddingBottom="5dp"
-            android:layout_toEndOf="@+id/iv_back"
             android:text="@string/detours"
             android:textSize="30sp"
             android:textStyle="bold" />
@@ -46,21 +46,27 @@
 
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_detours"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/detour_activity_top"
         android:layout_above="@id/tv_where_is_data_from"
-        tools:listitem="@layout/detours_rv_item"/>
+        android:layout_below="@+id/detour_activity_top">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_detours"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/detours_rv_item" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
     <View
         android:id="@+id/bottom_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_below="@id/swiperefresh"
         android:background="@android:color/black"
-        android:layout_below="@id/rv_detours"
         android:backgroundTint="@color/light_gray_2" />
 
     <TextView
@@ -76,14 +82,6 @@
         android:paddingRight="25dp"
         android:paddingBottom="10dp"
         android:text="@string/data_is_from"
-        android:textSize="16sp"
-        android:textColor="?android:textColor"/>
-
-    <ProgressBar
-        android:id="@+id/progressBar_detours"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerInParent="true"/>
-
+        android:textColor="?android:textColor"
+        android:textSize="16sp" />
 </RelativeLayout>
