--- a/app/src/main/res/layout/activity_detur.xml
+++ b/app/src/main/res/layout/activity_detur.xml
@@ -10,7 +10,7 @@
         android:id="@+id/detour_activity_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="7dp"
+        android:paddingTop="7dp"
         android:paddingStart="7dp">
 
         <ImageView
@@ -32,6 +32,7 @@
             android:paddingTop="5dp"
             android:paddingEnd="15dp"
             android:paddingBottom="5dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/detours"
             android:textSize="30sp"
             android:textStyle="bold" />
