--- a/app/src/main/res/layout/detours_rv_item.xml
+++ b/app/src/main/res/layout/detours_rv_item.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:paddingLeft="24dp"
     android:paddingTop="20dp"
-    android:paddingRight="24dp"
-    android:paddingBottom="20dp">
+    android:paddingRight="24dp">
 
     <TextView
         android:id="@+id/posted_time"
@@ -58,5 +57,14 @@
         android:layout_marginTop="12dp"
         android:text="@string/click_for_more"
         android:textSize="14sp" />
+
+    <View
+        android:id="@+id/top_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/tv_click_more"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/black"
+        android:backgroundTint="@color/light_gray_2" />
 
 </RelativeLayout>
