--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <View
+        android:id="@+id/map_filter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0"
+        android:background="?backgroundViewColor" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/header"
         android:layout_width="match_parent"
@@ -82,43 +89,15 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <ImageView
-        android:id="@+id/maps_location_icon"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="162dp"
-        android:background="@drawable/stretched_circle"
-        android:backgroundTint="?backgroundViewColor"
-        android:clickable="true"
-        android:elevation="6dp"
-        android:focusable="true"
-        android:scaleType="center"
-        android:src="@drawable/ic_my_location_black_24dp"
-        android:tint="?android:textColor" />
 
-    <View
-        android:id="@+id/shadow"
-        android:layout_width="match_parent"
-        android:layout_height="16dp"
-        android:background="@drawable/top_shadow_gradient"
-        android:elevation="6dp"
-        android:translationZ="6dp"
-        app:layout_anchor="@id/bottom_sheet" />
-
-    <FrameLayout
-        android:id="@+id/bottom_sheet"
+    <include
+        android:id="@+id/bottom_main"
+        layout="@layout/activity_main_bottom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="true"
-        android:elevation="6dp"
-        android:focusable="true"
-        android:translationZ="6dp"
-        app:behavior_fitToContents="false"
-        app:behavior_hideable="false"
-        app:behavior_peekHeight="150dp"
-        app:layout_behavior="@string/view_pager_bottom_sheet_behavior" />
+        android:layout_marginTop="80dp"
+        android:elevation="7dp"
+        android:translationZ="7dp" />
 
     <com.VegaSolutions.lpptransit.ui.errorhandlers.TopMessage
         android:id="@+id/top_message"
