--- a/app/src/main/res/layout/activity_main_bottom.xml
+++ b/app/src/main/res/layout/activity_main_bottom.xml
@@ -18,6 +18,11 @@
         android:scaleType="center"
         android:src="@drawable/ic_my_location_black_24dp"
         android:tint="?android:textColor" />
+    <com.VegaSolutions.lpptransit.ui.errorhandlers.TopMessage
+        android:id="@+id/top_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp" />
     <View
         android:id="@+id/shadow"
         android:layout_width="match_parent"
