--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <fragment
         android:id="@+id/map"
@@ -13,147 +13,17 @@
         android:layout_height="match_parent"
         tools:context=".ui.activities.lpp.RouteActivity" />
 
-
-    <ImageView
-        android:id="@+id/maps_location_icon"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="112dp"
-        android:background="@drawable/stretched_circle"
-        android:backgroundTint="?backgroundViewColor"
-        android:clickable="true"
-        android:elevation="6dp"
-        android:focusable="true"
-        android:scaleType="center"
-        android:src="@drawable/ic_my_location_black_24dp"
-        android:tint="?android:textColor" />
-
     <View
-        android:id="@+id/shadow"
-        android:layout_width="match_parent"
-        android:layout_height="16dp"
-        android:background="@drawable/top_shadow_gradient"
-        android:translationZ="6dp"
-        app:layout_anchor="@id/bottom_sheet" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/bottom_sheet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?backgroundViewColor"
-        android:elevation="4dp"
-        android:translationZ="2dp"
-        app:behavior_hideable="false"
-        app:behavior_peekHeight="100dp"
-        app:layout_behavior="@string/view_pager_bottom_sheet_behavior">
-
-        <FrameLayout
-            android:id="@+id/header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?backgroundViewColor"
-            android:clickable="true"
-            android:focusable="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:stateListAnimator="@animator/titlebar_elevaton">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/back"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginBottom="12dp"
-                    android:background="?selectableItemBackgroundBorderless"
-                    android:scaleType="center"
-                    android:src="@drawable/ic_arrow_back_black_24dp"
-                    android:tint="?android:textColor"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <include
-                    android:id="@+id/route_circle"
-                    layout="@layout/template_route_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/route_name"
-                    app:layout_constraintStart_toEndOf="@+id/back"
-                    app:layout_constraintTop_toTopOf="@+id/route_name" />
-
-                <TextView
-                    android:id="@+id/route_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:backgroundTint="?android:textColor"
-                    android:ellipsize="marquee"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:marqueeRepeatLimit="marquee_forever"
-                    android:scrollHorizontally="true"
-                    android:singleLine="true"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/back"
-                    app:layout_constraintEnd_toStartOf="@+id/route_opposite_btn"
-                    app:layout_constraintStart_toEndOf="@+id/route_circle"
-                    app:layout_constraintTop_toTopOf="@+id/back" />
-
-                <View
-                    android:id="@+id/view8"
-                    android:layout_width="50dp"
-                    android:layout_height="4dp"
-                    android:layout_marginTop="4dp"
-                    android:background="@drawable/stretched_circle"
-                    android:backgroundTint="@color/light_gray_2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageButton
-                    android:src="@drawable/ic_swap_vert_black_24dp"
-                    android:id="@+id/route_opposite_btn"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginBottom="12dp"
-                    android:background="?selectableItemBackgroundBorderless"
-                    android:elevation="2dp"
-                    android:tint="?android:textColor"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </FrameLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/station_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/header" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <com.VegaSolutions.lpptransit.ui.errorhandlers.TopMessage
-        android:id="@+id/loading_msg"
-        android:layout_width="match_parent"
+        android:alpha="0"
+        android:id="@+id/map_filter"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp" />
+        android:background="?backgroundViewColor" />
+
+    <include
+        android:id="@+id/bottom_route"
+        layout="@layout/activity_route_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
