--- a/app/src/main/res/layout/activity_detur.xml
+++ b/app/src/main/res/layout/activity_detur.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?backgroundViewColor"
     tools:context=".ui.activities.forum.DetourActivity">
 
     <RelativeLayout
@@ -17,9 +18,9 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
             android:layout_marginLeft="5dp"
             android:padding="7dp"
-            android:layout_marginStart="10dp"
             android:src="@drawable/ic_back_arrow"
             android:tint="?android:textColor" />
 
@@ -27,12 +28,12 @@
             android:id="@+id/tv_detours"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:layout_toEndOf="@+id/iv_back"
             android:paddingStart="15dp"
             android:paddingTop="5dp"
             android:paddingEnd="15dp"
             android:paddingBottom="5dp"
-            android:layout_marginBottom="5dp"
             android:text="@string/detours"
             android:textSize="30sp"
             android:textStyle="bold" />
