--- a/app/src/main/res/layout/activity_detur.xml
+++ b/app/src/main/res/layout/activity_detur.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?backgroundViewColor"
-    tools:context=".ui.activities.forum.DetourActivity">
+    tools:context=".ui.activities.DetourActivity">
 
     <RelativeLayout
         android:id="@+id/detour_activity_top"
@@ -22,7 +22,7 @@
             android:layout_marginLeft="5dp"
             android:padding="7dp"
             android:src="@drawable/ic_back_arrow"
-            android:tint="?android:textColor" />
+            app:tint="?android:textColor" />
 
         <TextView
             android:id="@+id/tv_detours"
@@ -35,7 +35,7 @@
             android:paddingEnd="15dp"
             android:paddingBottom="5dp"
             android:text="@string/detours"
-            android:textSize="30sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <View
@@ -44,7 +44,7 @@
             android:layout_height="1dp"
             android:layout_below="@+id/tv_detours"
             android:background="@android:color/black"
-            android:backgroundTint="@color/light_gray_2" />
+            android:backgroundTint="@color/light_gray" />
 
     </RelativeLayout>
 
@@ -69,7 +69,7 @@
         android:layout_height="1dp"
         android:layout_below="@id/swiperefresh"
         android:background="@android:color/black"
-        android:backgroundTint="@color/light_gray_2" />
+        android:backgroundTint="@color/light_gray" />
 
     <TextView
         android:id="@+id/tv_where_is_data_from"
@@ -79,11 +79,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
-        android:paddingLeft="15dp"
+        android:paddingStart="15dp"
         android:paddingTop="10dp"
-        android:paddingRight="25dp"
+        android:paddingEnd="25dp"
         android:paddingBottom="10dp"
         android:text="@string/data_is_from"
         android:textColor="?android:textColor"
-        android:textSize="16sp" />
+        android:textSize="14sp" />
 </RelativeLayout>
